# glossgen-streamlit

./: .env_example  .gitignore  LICENSE  README.md  check-glossgen-deployment.sh  deploy-glossgen.sh  docker-compose.yml  pyproject.toml  requirements.txt
glossgen/: .env.example  Dockerfile  README.md  pyproject.toml  setup.py
glossgen/assets/: about.md
glossgen/src/: main.py
glossgen/src/glossgen/chains/: glossary_chain.py
glossgen/src/glossgen/config/: app_config.py
glossgen/src/glossgen/services/: database.py
glossgen/src/glossgen/state/: session_state.py
glossgen/src/glossgen/tools/: sql.py
glossgen/src/glossgen/ui/components/: database_tab.py  export_tab.py  glossary_tab.py  instructions_tab.py  relationships_tab.py  sidebar.py  table_description_tab.py
glossgen/src/glossgen/utils/: ai_utils.py  data_processing.py  utils.py
sql_data/: temp_table.db
